--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install
-        run: yarn ci
+        run: yarn install
       - name: Build
         run: yarn build
       - name: Upload GitHub Pages artifact
